# traffic-replay

./: .gitignore  .prettierignore  .prettierrc  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
backend/: Cargo.toml  config.toml
backend/src/: main.rs
public/: events.json  iconMapping.json  index.html
src/: App.js  App.tsx  artccs.json  consts.ts  main.tsx  store.ts  styles.css
src/components/: PlaybackBar.tsx  Sidebar.tsx
src/components/ui-core/: Checkbox.tsx
src/data/: aircraft.json
src/scripts/: createAtlas.ts
src/types/: vatsim-capture.ts
src/utils/: icons.ts
